# Releases

## v0.6.0

* add change password feature

## v0.5.0

* [Security] a user provided password was NOT used for the creation of the secret key #11 (thx @davidmigloz)
* various small fixes cleaning memory from security relevant data (internal keys, salts, etc.)
* fix minSdk to be 19 instead of 21

### Known Issues

* currently the AES mode GCM does not work correctly on Kitkat, working on a fix
* currently migration is needed if user password was used (will add a migration guide later)

## v0.4.3

* better exception clean up with resources and some byte wipe

## v0.4.2

* supporting `null` in `.putString()` and `.putStringSet()`; same as calling `remove()` as per API spec

## v0.4.1

* fixes missing using incorrect dependency type '.aar'

## v0.4.0

* fixes missing transitive dependency in pom

## v0.3.0

* add compressor feature
* fixes issue were storage salt was incorrectly created

## v0.2.0

* add authenticated encryption additional associated data
* add crypto protocol version

## v0.1.0

initial release