@@ -9,6 +9,20 @@ import android.content.SharedPreferences;
 public interface ArmadilloSharedPreferences extends SharedPreferences {
 
     /**
+     * Changes the user provided password to the new given password and sets a new strechting function.
+     * This will immediately reencrypt all the key/value entries with the new password and the data
+     * won't be accessible with the old one anymore. This process is atomic, if an exception happens
+     * during it, nothing will change.
+     * <p>
+     * Warning: Depending on the use key stretching function and count of saved data this is a very
+     * expensive call.
+     *
+     * @param newPassword which will be additionally used to create the key for the encryption
+     * @param function    set a new function to be used the encrypt with new password
+     */
+    void changePassword(char[] newPassword, KeyStretchingFunction function);
+
+    /**
      * Changes the user provided password to the new given password. This will immediately reencrypt
      * all the key/value entries with the new password and the data won't be accessible with the old
      * one anymore. This process is atomic, if an exception happens during it, nothing will change.
