@@ -2,7 +2,9 @@
 
 ## v0.6.0
 
+* [Security] fix bcrypt implementation #16, #8
 * add change password feature
+* add change key stretching feature
 
 ## v0.5.0
 
